--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -276,8 +276,10 @@ post:
     # type: disqus
     # type: giscus
     # type: gitalk
-    # type: twikoo
-    type: valine
+    # type: valine
+    # type: waline
+    type: twikoo
+
   # 评论插件
   # Comment plugin
 
@@ -322,11 +324,6 @@ gitalk:
   # https://github.com/Zibri/cloudflare-cors-anywhere
   #proxy: https://cors-anywhere.azm.workers.dev/https://github.com/login/oauth/access_token
 
-twikoo:
-  envId: https://zjf1229-twikoo.hf.space
-  region: ap-shanghai
-  path: window.location.pathname
-
 valine:
   appId: 4wG1rY0f6GJtRVM5TOUwPg09-MdYXbMMI
   appKey: xLEdQeRxyKYMw5ap4SrpcQtp
@@ -344,6 +341,24 @@ valine:
   emojiCDN:
   emojiMaps:
   enableQQ: false
+
+waline:
+  serverURL: 'mywaline-lac.vercel.app'
+  path: window.location.pathname
+  meta: ['nick', 'mail', 'link']
+  requiredMeta: ['nick']
+  lang: 'zh-CN'
+  emoji: ['https://cdn.jsdelivr.net/gh/walinejs/emojis/weibo']
+  dark: 'html[data-user-color-scheme="dark"]'
+  wordLimit: 0
+  pageSize: 10
+
+twikoo:
+  # envId: https://vercel-twikoo-orcin.vercel.app/
+  envId: https://chino1229.netlify.app/.netlify/functions/twikoo
+  # envId: https://zjf1229-twikoo.hf.space
+  region: ap-shanghai
+  path: window.location.pathname
 
 # 导航栏的相关配置
 # Navigation bar
