--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ timezone: 'Asia/Shanghai'
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-# url: http://example.com
-url: https://www.318649213.xyz/blog
-root: /blog/
+url: http://example.com
+# url: https://www.318649213.xyz/blog
+# root: /blog/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
