--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -274,9 +274,9 @@ post:
   comments:
     enable: true
     # type: disqus
-    type: giscus
+    # type: giscus
     # type: gitalk
-    # type: valine
+    type: valine
     # type: waline
     # type: twikoo
 
