更新评论系统配置，添加中文LaTeX配置指南及思考总结

--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -275,8 +275,8 @@ post:
     enable: true
     # type: disqus
     # type: giscus
-    # type: gitalk
-    type: valine
+    type: gitalk
+    # type: valine
     # type: waline
     # type: twikoo
 
